--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,6 +1,6 @@
 .advantages__title {
   margin: 0;
-  padding-top: 34px;
+  padding-top: 52px;
   color: $main-font-color;
   font-size: 25px;
   font-weight: $font-bold;
@@ -13,40 +13,91 @@
 
 .advantages__item {
   position: relative;
-  padding-top: 88px;
+  padding-top: 80px;
+  padding-bottom: 5px;
   color: $main-font-color;
   font-size: 17px;
   font-weight: $font-bold;
   line-height: 20px;
+  &:first-child{
+    padding-top: 86px;
+    padding-bottom: 0px;
+  }
+  &:nth-child(5){
+    padding-top: 76px;
+  }
 }
+
 .advantages__icon {
   position: absolute;
   fill: $theme-color;
-  top: 40px;
 }
 
-@media (min-width: $mobile-width) {
-  .advantages{
-    @include inside-container;
+.advantages__icon--flower {
+  top: 30px;
+  left: 7px;
+}
+
+.advantages__icon--money {
+  top: 29px;
+}
+
+.advantages__icon--heart {
+  top: 32px;
+  left: 7px;
+}
+
+.advantages__icon--ball {
+  top: 27px;
+  left: 1px;
+}
+
+.advantages__icon--rocket{
+  top: 27px;
+  left: -6px;
+}
+
+.advantages__icon--gift{
+  top: 27px;
+  left: 2px;
+}
+
+.advantages{
+  @include inside-container;
+  position: relative;
+  &::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 6px;
+    background-image: url("../img/bg-zigzag-line.svg");
+    background-size: 320px 6px;
+    background-repeat: repeat-x;
+    left: 0px;
+    top: 20px;
   }
 }
+
 
 @media (min-width: $tablet-width) {
   .advantages{
     max-width: 1050px;
     position: relative;
-      &::after{
+      &::after {
         position: absolute;
         content: "";
         width: 100%;
-        height: 34px;
+        height: 24px;
         background-image: url("../img/bg-zigzag-line.svg");
+        background-size: 772px 17px;
         background-repeat: repeat-x;
+        transform: rotate(180deg);
         left: 0px;
-        top: -20px;
+        top: -30px;
     }
   }
   .advantages__title {
+    padding-top: 43px;
     font-size: 43px;
     line-height: 50px;
   }
@@ -59,28 +110,42 @@
   }
 
   .advantages__item{
-    margin-right: 50px;
     width: 250px;
     font-size: 20px;
     line-height: 22px;
     &:nth-child(1){
+      margin-top: 20px;
       order: 1;
     }
     &:nth-child(2){
+      margin-top: 25px;
       order: 3;
     }
+    &:nth-child(3){
+      margin-top: 25px;
+      order: 5;
+    }
     &:nth-child(4){
+      margin-top: 25px;
       order: 2;
     }
     &:nth-child(5){
+      margin-top: 30px;
       width: 300px;
       order: 4;
     }
-    &:nth-child(3){
-      order: 5;
-    }
     &:nth-child(6){
+      margin-top: 25px;
       order: 6;
+    }
+    &:nth-child(4n){
+      margin-left: 85px;
+    }
+    &:nth-child(5n){
+      margin-left: 85px;
+    }
+    &:nth-child(6n){
+      margin-left: 85px;
     }
   }
 }
