--- a/source/sass/blocks/directions.scss
+++ b/source/sass/blocks/directions.scss
@@ -3,10 +3,10 @@
   font-weight: $font-bold;
   line-height: 30px;
   margin: 0;
-  padding-top: 76px;
+  padding-top: 72px;
   margin-right: auto;
   margin-left: auto;
-  width: 215px;
+  width: 250px;
   text-align: center;
 }
 
@@ -24,7 +24,9 @@
 .directions__link {
   position: relative;
   display: block;
-  padding: 30px 0;
+  padding: 0;
+  padding-top: 27px;
+  padding-bottom: 28px;
   background-color: $theme-color;
   width: 100%;
   text-decoration: none;
@@ -66,8 +68,15 @@
   position: absolute;
   fill: #149080;
   opacity: 0.5;
-  right: 30px;
-  top: 20px;
+}
+
+.directions__icon--interior{
+  right: 35px;
+  top: 25px;
+}
+.directions__icon--toy{
+  right: 27px;
+  top: 22px;
 }
 
 .directions__item {
@@ -76,30 +85,30 @@
   }
 }
 
-@media (min-width: $mobile-width) {
-  .directions {
-    margin-top: 1px;
-    background-image: url("../img/hero-mobile@1x.jpg");
-    background-repeat: no-repeat;
-    background-position: 50% -10%;
-    background-color: #f9f9f9;
-    @media (min-resolution: $retina-dpi),
-    (min-resolution: $retina-dppx) {
-      background-image: url("../img/hero-mobile@2x.jpg");
-      background-size: 575px 373px;
-    }
-  }
-  .directions__list{
-    span{
-      @include inside-container;
-    }
+.directions {
+  margin-top: 1px;
+  background-image: url("../img/hero-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% -10%;
+  background-color: #f9f9f9;
+  @media (min-resolution: $retina-dpi),
+  (min-resolution: $retina-dppx) {
+    background-image: url("../img/hero-mobile@2x.jpg");
+    background-size: 575px 373px;
   }
 }
+.directions__list{
+  span{
+    @include inside-container;
+  }
+}
+
 
 @media (min-width: $tablet-width) {
   .directions {
     margin-top: 0;
     background-image: url("../img/hero-tablet@1x.jpg");
+    background-position: 50% 95%;
     @media (min-resolution: $retina-dpi),
     (min-resolution: $retina-dppx) {
       background-image: url("../img/hero-tablet@2x.jpg");
@@ -107,23 +116,42 @@
     }
   }
   .directions__info{
+    padding-top: 80px;
     width: 500px;
-    margin-bottom: 360px;
+    margin-bottom: 376px;
     color: $main-font-color;
     font-size: 43px;
     font-weight: $font-bold;
     line-height: 50px;
   }
   .directions__list {
+    @include inside-container;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 100%;
+    width: auto;
   }
 
   .directions__item {
     display: flex;
     width: 50%;
+  }
+
+  .directions__link{
+    font-size: 20px;
+    line-height: 30px;
+    span{
+    padding-left: 35px;
+    }
+  }
+
+  .directions__icon--interior{
+    right: 35px;
+    top: 30px;
+  }
+  .directions__icon--toy{
+    right: 35px;
+    top: 30px;
   }
 
 }
