--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -3,53 +3,67 @@
 }
 
 .main-footer__social {
+  min-height: 80px;
   @include list-unstyling;
+  border-bottom: #e5e5e5;
 }
 
-@media (min-width: $mobile-width) {
+.main-footer__container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  @include inside-container;
+}
+
+.main-footer__logo {
+  display: none;
+}
+
+.main-footer__social-logo {
+  position: relative;
+  fill: $main-font-color;
+}
+
+.main-footer__social-logo--insta{
+  top: 30px;
+}
+
+.main-footer__social-logo--fb{
+  top: 25px;
+}
+
+.main-footer__social-logo--twitt {
+  top: 30px;
+}
+
+@media (min-width: $tablet-width){
+  .main-footer{
+    display: flex;
+    flex-direction: row;
+  }
+
   .main-footer__container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    @include inside-container;
+    width: 70%;
   }
-  .social-list{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 30%;
-    justify-content: space-around;
-  }
+
   .main-footer__logo {
-    display: none;
-  }
-  .social-list__item {
-    position: relative;
-  }
-  .main-footer__social-logo {
-    position: absolute;
-    top: 15px;
-    fill: $main-font-color;
-  }
-  .social-list__link {
+    padding-left: 50px;
+    padding-top: 50px;
+    display: inline-block;
+    margin: 0;
     &:hover,
-    &:focus {
-      .main-footer__social-logo{
-        fill: $theme-color;
-      }
+    &:focus{
+     .main-footer__logo-img{
+      fill: #46c1ae;
+     }
     }
     &:active{
       fill: #46c1ae;
       opacity: 0.3;
     }
   }
-}
-
-@media (min-width: $tablet-width){
-  .main-footer__logo {
-    display: inline-block;
-    width: 100px;
-    margin: 0;
+  .main-footer__logo-img{
+    fill: $main-font-color;
   }
 }
 
