--- a/source/sass/blocks/site-nav.scss
+++ b/source/sass/blocks/site-nav.scss
@@ -7,10 +7,12 @@
     text-decoration: none;
     color: $main-font-color;
     display: flex;
-    width: 60%;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
-    padding: 30px 0;
+    padding-left: 50px;
+    padding-top: 26px;
+    padding-bottom: 28px;
 
     &:hover,
     &:focus {
@@ -34,21 +36,24 @@
   }
 
   .site-nav__item{
-
+    padding-left: 35px;
     box-shadow: none;
     border: none;
 
     a {
+      margin: 0;
+      padding-top: 20px;
+      padding-left: 0px;
       color: $main-font-color;
       font-size: 15px;
       font-weight: $font-bold;
       line-height: 24px;
       display: inline-block;
-      width: 85%;
-      margin: 0;
-      &:nth-child(1){
-        padding-left: 50px;
-      }
+      width: 100%;
+    }
+    &:first-child{
+      padding: 0px;
+      padding-left: 50px;
     }
   }
 }
