--- a/source/sass/blocks/weekly-goods.scss
+++ b/source/sass/blocks/weekly-goods.scss
@@ -7,7 +7,6 @@
 }
 
 .weekly-goods__subtitle {
-  padding-top: 20px;
   font-size: 25px;
   font-weight: $font-bold;
   line-height: 30px;
@@ -28,15 +27,18 @@
   line-height: 20px;
 
   td {
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding-top: 8px;
+    padding-bottom: 10px;
     border-bottom: 1px solid #ececec;
   }
+}
+.weekly-goods__field {
+  width: 48px;
 }
 
 .weekly-goods__value {
   display: block;
-  padding-left: 30px;
+  padding-left: 20px;
 }
 
 .weekly-goods__price {
@@ -47,64 +49,72 @@
 }
 
 .weekly-goods__btn {
-  margin-top: 16px;
+  margin-top: 11px;
   margin-bottom: 0;
 }
 
+.weekly-goods{
+  position: relative;
+  @include inside-container;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 20px;
+}
+.weekly-goods__header{
+  display: flex;
+  flex-direction: column;
+  order: 1;
+}
+.weekly-goods__title{
+  margin: 0;
+  padding-top: 4px;
+  order: 2;
+}
 
-@media (min-width: $mobile-width) {
-  .weekly-goods{
-    @include inside-container;
-    display: flex;
-    flex-direction: column;
-  }
-  .weekly-goods__header{
-    display: flex;
-    flex-direction: column;
-    order: 1;
-  }
-  .weekly-goods__title{
-    margin: 0;
-    order: 2;
-  }
+.weekly-goods__subtitle {
+  padding-top: 3px;
+  margin-bottom: 0px;
+  font-size: 25px;
+  font-weight: $font-bold;
+  line-height: 30px;
+  order: 1;
+}
 
-  .weekly-goods__subtitle {
-    padding-top: 20px;
-    font-size: 25px;
-    font-weight: $font-bold;
-    line-height: 30px;
-    order: 1;
-  }
+.weekly-goods__main-container{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  order: 2;
+}
 
-  .weekly-goods__main-container{
-    display: flex;
-    flex-direction: column;
-    order: 2;
-  }
-
-  .weekly-goods__description {
-    color: $loghten-font;
-    font-size: 15px;
-    font-weight: $font-normal;
-    line-height: 20px;
-    width: 249px;
-    order: 3;
-  }
-  .weekly-goods__specifications {
-    order: 4;
-  }
-  .weekly-goods__image{
-    @include img-width;
-    order: 5;
-  }
-  .weekly-goods__price{
-    margin-right: auto;
-    margin-left: auto;
-    order: 6;
-  }
-  .weekly-goods__btn{
-    order: 7;
-  }
+.weekly-goods__description {
+  padding-top: 14px;
+  color: $loghten-font;
+  font-size: 15px;
+  font-weight: $font-normal;
+  line-height: 20px;
+  width: 249px;
+  order: 3;
+}
+.weekly-goods__specifications {
+  margin-bottom: 363px;
+  padding-top: 9px;
+  order: 4;
+  width: 100%;
+}
+.weekly-goods__image{
+  position: absolute;
+  bottom: 125px;
+  @include img-width;
+  order: 5;
+}
+.weekly-goods__price{
+  width: 124px;
+  padding-left: 65px;
+  order: 6;
+}
+.weekly-goods__btn{
+  order: 7;
 }
 
 @media (min-width: $tablet-width) {
@@ -118,25 +128,29 @@
         height: 34px;
         background-image: url("../img/bg-zigzag-fill.svg");
         background-repeat: repeat-x;
+        background-size: 770px 24px;
         left: 0px;
-        top: -20px;
+        top: -10px;
     }
   }
   .weekly-goods__header{
     flex-grow: 2;
-    margin-top: 30px;
+    margin-top: 50px;
     display: flex;
     flex-direction: row;
     order: 1;
   }
   .weekly-goods__title{
-    display: flex;
     margin: 0;
+    margin-left: auto;
+    margin-right: 30px;
+    padding-top: 10px;
+    display: flex;
+    font-size: 17px;
+    line-height: 17px;
     order: 2;
     width: 70px;
     text-align: center;
-    margin-left: auto;
-    margin-right: 0;
   }
   .weekly-goods__subtitle {
     padding: 0;
@@ -148,6 +162,18 @@
     order: 1;
   }
 
+  .weekly-goods__description{
+    padding-top: 30px;
+    font-size: 17px;
+    line-height: 30px;
+    width: 100%;
+  }
+
+  .weekly-goods__specifications{
+    margin: 0px;
+    padding-top: 20px;
+  }
+
  .weekly-goods__main-container{
     display: flex;
     flex-direction: row;
@@ -155,16 +181,42 @@
     order: 2;
   }
 
+  .weekly-goods__price{
+    margin-top: 50px;
+    padding-left: 70px;
+    font-size: 20px;
+    line-height: 24px;
+    width: 150px;
+  }
+
+  .weekly-goods__btn{
+    margin-top: 15px;
+    padding: 0px;
+    padding-top: 15px;
+    padding-bottom: 13px;
+    padding-left: 95px;
+    font-size: 17px;
+    line-height: 20px;
+  }
+
   .weekly-goods__sub-container{
     display: flex;
     flex-direction: column;
-    width: 282px;
+    width: 290px;
   }
+
   .weekly-goods__image-contaner{
+    padding-top: 55px;
     margin-left: auto;
     margin-right: 0px;
     display: flex;
     order: 3;
+  }
+
+  .weekly-goods__image{
+    position: relative;
+    top: 0;
+    left: 0;
   }
 }
 
