--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -31,35 +31,29 @@
 .advantages__icon {
   position: absolute;
   fill: $theme-color;
-}
-
-.advantages__icon--flower {
-  top: 30px;
-  left: 7px;
-}
-
-.advantages__icon--money {
-  top: 29px;
-}
-
-.advantages__icon--heart {
+  &--flower{
+    top: 30px;
+    left: 7px;
+  }
+  &--money{
+    top: 29px;
+  }
+  &--heart{
   top: 32px;
   left: 7px;
-}
-
-.advantages__icon--ball {
+  }
+  &--ball{
   top: 27px;
   left: 1px;
-}
-
-.advantages__icon--rocket{
+  }
+  &--rocket{
   top: 27px;
   left: -6px;
-}
-
-.advantages__icon--gift{
+  }
+  &--gift{
   top: 27px;
   left: 2px;
+  }
 }
 
 .advantages{
@@ -153,9 +147,60 @@
 @media (min-width: $desctop-width){
   .advantages{
     @include central-container;
+      &::after {
+        width: 1050px;
+        margin-left: 50px;
+        background-image: url("../img/bg-zigzag-line.svg");
+        background-size: 1050px 24px;
+        background-repeat: repeat-x;
+        transform: rotate(180deg);
+        left: 0px;
+        top: -40px;
+    }
   }
   .advantages__title {
+    padding-left: 170px;
     font-size: 53px;
     line-height: 57px;
+  }
+
+  .advantages__list {
+    padding-left: 175px;
+  }
+  .advantages__item{
+    &:nth-child(1){
+      margin-top: 15px;
+      order: 1;
+    }
+    &:nth-child(2){
+      margin-top: 25px;
+      order: 3;
+    }
+    &:nth-child(3){
+      margin-top: 25px;
+      order: 5;
+    }
+    &:nth-child(4){
+      margin-top: 20px;
+      order: 2;
+    }
+    &:nth-child(5){
+      margin-top: 30px;
+      width: 300px;
+      order: 4;
+    }
+    &:nth-child(6){
+      margin-top: 25px;
+      order: 6;
+    }
+    &:nth-child(4n){
+      margin-left: 100px;
+    }
+    &:nth-child(5n){
+      margin-left: 100px;
+    }
+    &:nth-child(6n){
+      margin-left: 100px;
+    }
   }
 }
