--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -8,7 +8,7 @@
   border-bottom: #e5e5e5;
 }
 
-.main-footer__container{
+.main-footer__inside-container{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -37,18 +37,19 @@
 }
 
 @media (min-width: $tablet-width){
-  .main-footer{
+  .main-footer__container{
     display: flex;
     flex-direction: row;
   }
 
-  .main-footer__container{
+  .main-footer__inside-container{
     width: 70%;
   }
 
   .main-footer__logo {
     padding-left: 50px;
     padding-top: 50px;
+    padding-bottom: 55px;
     display: inline-block;
     margin: 0;
     &:hover,
@@ -71,7 +72,19 @@
   .main-footer__container{
     max-width: 1050px;
     @include container;
+    @include inside-container;
   }
+
+  .main-footer__logo{
+    padding-left: 0px;
+  }
+
+  .main-footer__inside-container{
+    padding: 0px;
+    justify-content: space-between;
+    flex-grow: 1;
+  }
+
    .main-footer__copyright{
     margin: 0;
    }
