--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -2,7 +2,16 @@
   margin-top: 30px;
   margin-right: 30px;
   margin-left: 30px;
+  margin-bottom: 60px;
   border: 1px solid #ececec;
+  &:hover,
+  &:focus {
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  &:active {
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  }
 }
 
 .production__container{
@@ -11,17 +20,25 @@
 }
 
 .production__title {
-  width: 70%;
+  padding-top: 8px;
+  padding-left: 60px;
+  padding-bottom: 10px;
+  width: 55%;
   margin-left: auto;
   margin-right: auto;
   color: $main-font-color;
   font-size: 17px;
   font-weight: $font-bold;
   line-height: 24px;
+  background-image: url("../img/icon-video.svg");
+  background-repeat: no-repeat;
+  background-position: 5px 15px;
 }
 
 .production__description {
-  width: 70%;
+  width: 73%;
+  padding-top: 10px;
+  padding-right: 7px;
   margin-left: auto;
   margin-right: auto;
   color: $loghten-font;
@@ -31,13 +48,17 @@
 }
 
 .production__btn{
+  margin-top: 24px;
   display: block;
   text-align: center;
-  width: 70%;
+  width: 63%;
   margin-left: auto;
   margin-right: auto;
   padding: 0px;
-  padding: 12px 15px;
+  padding: 0 13px;
+  padding-top: 12px;
+  padding-bottom: 16px;
+  margin-bottom: 32px;
 
 }
 
