--- a/source/sass/font-stack.scss
+++ b/source/sass/font-stack.scss
@@ -1,3 +1,64 @@
 $font-stack: "Open Sans", "Roboto", sans-serif;
 $font-bold: 700;
 $font-normal: 400;
+
+@font-face {
+  font-family: "Open Sans";
+  font-weight: 400;
+  font-style: normal;
+  src:
+  url("../fonts/Opensans/OpenSans-Regular.ttf") format("truetype"),
+  url("../fonts/Opensans/OpenSans-Regular.woff2") format("woff2"),
+  url("../fonts/Opensans/OpenSans-Regular.woff") format("woff"),
+}
+
+@font-face {
+  font-family: "Open Sans";
+  font-weight: 700;
+  font-style: bold;
+  src:
+  url("../fonts/Opensans/OpenSans-Bold.ttf") format("truetype"),
+  url("../fonts/Opensans/OpenSans-Bold.woff2") format("woff2"),
+  url("../fonts/Opensans/OpenSans-Bold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Open Sans";
+  font-weight: 400;
+  font-style: italic;
+  src:
+  url("../fonts/Opensans/OpenSans-Italic.ttf") format("truetype"),
+  url("../fonts/Opensans/OpenSans-Italic.woff2") format("woff2"),
+  url("../fonts/Opensans/OpenSans-Italic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Roboto";
+  font-weight: 400;
+  font-style: normal;
+  src:
+  url("../fonts/Roboto/Roboto-Regular.ttf") format("truetype"),
+  url("../fonts/Roboto/Roboto-Regular.woff2") format("woff2"),
+  url("../fonts/Roboto/Roboto-Regular.woff") format("woff"),
+}
+
+@font-face {
+  font-family: "Roboto";
+  font-weight: 700;
+  font-style: bold;
+  src:
+  url("../fonts/Roboto/Roboto-Bold.ttf") format("truetype"),
+  url("../fonts/Roboto/Roboto-Bold.woff2") format("woff2"),
+  url("../fonts/Roboto/Roboto-Bold.woff") format("woff"),
+}
+
+@font-face {
+  font-family: "Roboto";
+  font-weight: 400;
+  font-style: italic;
+  src:
+  url("../fonts/Roboto/Roboto-Italic.ttf") format("truetype"),
+  url("../fonts/Roboto/Roboto-Italic.woff2") format("woff2"),
+  url("../fonts/Roboto/Roboto-Italic.woff") format("woff"),
+}
+
