--- a/source/sass/blocks/catalog-items.scss
+++ b/source/sass/blocks/catalog-items.scss
@@ -3,6 +3,12 @@
   @include inside-container;
 }
 
+@media (min-width: $tablet-width) {
+  .catalog-items{
+    padding-top: 12px;
+  }
+}
+
 @media (min-width: $desctop-width){
   .catalog-items__list {
     display: flex;
