--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,4 +1,5 @@
 .page-header {
+  position: relative;
   background-color: #f1f1f1;
 }
 
@@ -17,5 +18,27 @@
 }
 
 @media(min-width: $tablet-width){
-
+.page-header {
+  position: relative;
+  background-color: #f1f1f1;
+  padding-bottom: 16px;
+}
+  .page-header::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 24px;
+    background-image: url(../img/bg-zigzag-fill.svg);
+    background-size: 770px 24px;
+    bottom: 0px;
+    left: 0px;
+  }
+  .page-header__title {
+    margin-bottom: 0px;
+    padding-left: 0px;
+    padding-top: 25px;
+    font-size: 43px;
+    line-height: 50px;
+    width: 376px;
+  }
 }
