--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -66,28 +66,43 @@
   .production {
     display: flex;
     flex-direction: column;
-    margin-top: 30px;
+    margin-top: 50px;
     margin-right: 50px;
     margin-left: 50px;
     border: 1px solid #ececec;
   }
   .production__title {
-    margin-left: 40px;
+    order: 2;
+    margin-top: 25px;
+    margin-left: 42px;
+    padding-left: 64px;
     font-size: 20px;
     line-height: 24px;
+    background-position: 0px 5px;
+  }
+
+  .production__container{
+    order: 1;
   }
 
   .production__description {
-    width: 70%;
+    order: 3;
+    padding-top: 0px;
+    margin-top: 5px;
     margin-left: 40px;
     font-size: 15px;
     line-height: 30px;
+    width: 87%;
   }
 
   .production__btn {
-    width: 70%;
+    order: 4;
+    margin-top: 21px;
     margin-left: 40px;
-    padding: 12px 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    width: 87%;
+    margin-bottom: 45px;
   }
 }
 @media (min-width: $desctop-width) {
