Каталог Pixel-perfect Главная

--- a/source/sass/blocks/catalog-video.scss
+++ b/source/sass/blocks/catalog-video.scss
@@ -42,3 +42,10 @@
     left: 280px;
   }
 }
+
+@media (min-width: $desctop-width) {
+  .catalog-video{
+    width: 682px;
+    height: 455px;
+  }
+}
