--- a/source/sass/blocks/good.scss
+++ b/source/sass/blocks/good.scss
@@ -129,19 +129,32 @@
 
 @media (min-width: $desctop-width){
   .good {
+    margin-top: 100px;
     width: 30%;
     display: flex;
     flex-direction: column;
   }
   .good__image-container{
     width: 100%;
+    max-height: 470px;
   }
   .good__info-container{
-    width: 90%;
+    width: 81.5%;
   }
+
+  .good__title{
+    padding-top: 5px;
+    font-size: 20px;
+    line-height: 24px;
+  }
+
   .good__bottom {
-    margin-top: auto;
-    margin-bottom: none;
+    margin-top: 23px;
+    margin-left: 0px;
+    margin-bottom: 0px;
+    &--toys-cart{
+      margin-top: 0px;
+    }
   }
 }
 
