--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -17,13 +17,13 @@
   line-height: 30px;
 }
 
-@media(min-width: $tablet-width){
-.page-header {
-  position: relative;
-  background-color: #f1f1f1;
-  padding-bottom: 16px;
-}
-  .page-header::after{
+@media (min-width: $tablet-width){
+  .page-header {
+    position: relative;
+    background-color: #f1f1f1;
+    padding-bottom: 16px;
+  }
+  .page-header::after {
     content: "";
     position: absolute;
     width: 100%;
@@ -42,3 +42,30 @@
     width: 376px;
   }
 }
+
+@media (min-width: $desctop-width){
+  .page-header {
+    position: relative;
+    background-color: #f1f1f1;
+    padding-bottom: 45px;
+  }
+  .page-header::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 34px;
+    background-image: url(../img/bg-zigzag-fill.svg);
+    background-size: 1150px 34px;
+    bottom: 0px;
+    left: 0px;
+  }
+  .page-header__title {
+    margin-bottom: 0px;
+    padding-left: 14px;
+    padding-top: 50px;
+    font-size: 53px;
+    line-height: 57px;
+    width: 476px;
+  }
+}
+
