--- a/source/sass/blocks/form-sorting.scss
+++ b/source/sass/blocks/form-sorting.scss
@@ -1,4 +1,5 @@
 .form-sorting__description {
+  margin-top: 22px;
   width: 242px;
   color: $loghten-font;
   font-size: 13px;
@@ -12,6 +13,7 @@
 }
 
 .form-sorting__important-inputs {
+  margin-top: 11px;
   color: $loghten-font;
   font-size: 14px;
   font-weight: $font-normal;
@@ -20,15 +22,22 @@
 }
 
 .form-sorting__btn {
+  margin-top: 18px;
+  margin-bottom: 55px;
   margin-left: 30px;
-  padding: 0;
-  padding: 12px 50px;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 22px;
+  width: 81.2%;
+  padding-bottom: 16px;
   text-align: center;
+
 }
 
 @media (min-width: $tablet-width) {
   .form-sorting__description {
-    width: 60%;
+    padding-top: 50px;
+    width: 80%;
     font-size: 17px;
     line-height: 30px;
   }
