--- a/source/sass/blocks/order-fieldset.scss
+++ b/source/sass/blocks/order-fieldset.scss
@@ -4,7 +4,7 @@
 
 .order-fieldset__legend {
   position: relative;
-  padding-top: 30px;
+  margin-top: 12px;
   margin-bottom: 10px;
   width: 100%;
   color: $theme-color;
@@ -16,18 +16,25 @@
   span{
     z-index: 1;
     background-color: $primary-color;
-    padding-right: 20px;
+    padding-right: 25px;
   }
 
   &::after{
     position: absolute;
     content: "";
-    height: 2px;
+    height: 1px;
     right: 0;
     left: 0;
     background-color: $theme-color;
     bottom: 7px;
     z-index: -1;
+  }
+}
+
+.order-fieldset__container{
+  padding-bottom: 30px;
+  &--name{
+    padding-bottom: 19px;
   }
 }
 
@@ -39,24 +46,182 @@
   display: flex;
   flex-direction: column;
   padding-top: 24px;
-  padding-bottom: 24px;
+  input{
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 18px;
+  }
 }
 
-.field-label {
+.fieldset__label {
+  position: relative;
   color: $main-font-color;
   font-size: 17px;
   font-weight: $font-bold;
   line-height: 18px;
+  &--radio,
+  &--checkbox{
+    padding-left: 62px;
+  }
+}
+
+.fieldset__label--radio::after {
+  position: absolute;
+  content: "";
+  left: 0px;
+  top: -10px;
+  width: 35px;
+  height: 35px;
+  border: 2px solid #444444;
+  background-color: transparent;
+  border-radius: 50%;
+}
+.order-fieldset__radio:checked+.fieldset__label--radio::before {
+  position: absolute;
+  content: "";
+  left: 11px;
+  top: 2px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: $theme-color;
+}
+
+.fieldset__label--checkbox:hover::after,
+.fieldset__label--checkbox:focus+.fieldset__label--checkbox::after,
+.fieldset__label--radio:hover::after,
+.order-fieldset__radio:focus+.fieldset__label--radio::after{
+  border: 2px solid $theme-color;
+}
+
+.fieldset__label--radio:active::after {
+  border: 2px solid rgba(68,68,68,0.3);
+}
+
+.order-fieldset__color-item{
+  padding-bottom: 19px;
+}
+
+.order-fieldset__color-item:first-child {
+  padding-top: 26px;
+}
+
+.order-fieldset__color-item:last-child {
+  padding-bottom: 0px;
+}
+
+.fieldset__label--checkbox::after {
+  position: absolute;
+  content: "";
+  left: 0px;
+  top: -10px;
+  width: 36px;
+  height: 35px;
+  border: 2px solid #444444;
+  background-color: transparent;
+}
+
+.order-fieldset__checkbox:checked+.fieldset__label--checkbox::before {
+  position: absolute;
+  content: "";
+  left: 9px;
+  top: 0px;
+  width: 33px;
+  height: 22px;
+  background-image: url(../img/icon-tick.svg);
+  background-repeat: no-repeat;
+  background-size: 22px 22px;
+}
+
+
+.order-fieldset__item--name{
+  padding-top: 23px;
+  input{
+    padding-top: 15px;
+    padding-bottom: 17px;
+  }
+}
+
+.order-fieldset__item--name:first-child {
+  padding-top: 20px;
+}
+
+.order-fieldset__container--contact{
+  padding-bottom: 20px;
+  label {
+    position: absolute;
+  }
+}
+
+.order-fieldset__icon-input-contaner{
+  position: relative;
+}
+
+.order-fieldset--phone-input{
+  padding-top: 7px;
+  padding-bottom: 12px;
+  font-size: 19px;
+  font-weight: 400;
+  line-height: 18px;
+  background-color: transparent;
+}
+
+.order-fieldset--email-input{
+    padding-top: 15px;
+    padding-bottom: 14px;
+    background-color: transparent;
+}
+
+.order-fieldset-icon{
+  position: absolute;
+  opacity: 0.2;
+  z-index: -1;
+}
+
+.order-fieldset--phone-icon{
+  top: 6px;
+  right: 11px;
+}
+
+.order-fieldset--mail-icon{
+  top: 8px;
+  right: 7px;
+}
+
+.order-fieldset--email-input:hover + .order-fieldset--mail-icon,
+.order-fieldset--email-input:focus + .order-fieldset--mail-icon,
+.order-fieldset--email-input:active + .order-fieldset--mail-icon,
+.order-fieldset--phone-input:hover + .order-fieldset--phone-icon,
+.order-fieldset--phone-input:focus + .order-fieldset--phone-icon,
+.order-fieldset--phone-input:active + .order-fieldset--phone-icon{
+  opacity: 1;
+  fill: $theme-color;
+}
+
+.form-sorting__textarea{
+  margin-top: 15px;
+  padding-top: 14px;
+  padding-left: 12px;
+  padding-right: 43px;
+  height: 121px;
+  width: 78%;
+  border: 2px solid $main-font-color;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+.order-fieldset__container--comment {
+  padding-bottom: 0px
 }
 
 .order-fieldset {
+  input{
+    border: none;
+    width: 100%;
+  }
   input,
   textarea {
-    border: none;
-    width: 260px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 15px;
     border-bottom: 2px solid $main-font-color;
     &::placeholder {
       opacity: 0.3;
@@ -74,13 +239,6 @@
     &:active{
       border: 2px solid $theme-color
     }
-  }
-}
-
-.order-fieldset {
-  textarea{
-    height: 142px;
-    border: 2px solid $main-font-color;
   }
 }
 
