--- a/source/sass/blocks/order-fieldset.scss
+++ b/source/sass/blocks/order-fieldset.scss
@@ -53,7 +53,7 @@
   }
 }
 
-.fieldset__label {
+.order-fieldset__label {
   position: relative;
   color: $main-font-color;
   font-size: 17px;
@@ -65,7 +65,7 @@
   }
 }
 
-.fieldset__label--radio::after {
+.order-fieldset__label--radio::after {
   position: absolute;
   content: "";
   left: 0px;
@@ -76,7 +76,7 @@
   background-color: transparent;
   border-radius: 50%;
 }
-.order-fieldset__radio:checked+.fieldset__label--radio::before {
+.order-fieldset__radio:checked+.order-fieldset__label--radio::before {
   position: absolute;
   content: "";
   left: 11px;
@@ -87,14 +87,14 @@
   background-color: $theme-color;
 }
 
-.fieldset__label--checkbox:hover::after,
-.fieldset__label--checkbox:focus+.fieldset__label--checkbox::after,
-.fieldset__label--radio:hover::after,
-.order-fieldset__radio:focus+.fieldset__label--radio::after{
+.order-fieldset__label--checkbox:hover::after,
+.order-fieldset__label--checkbox:focus+.order-fieldset__label--checkbox::after,
+.order-fieldset__label--radio:hover::after,
+.order-fieldset__radio:focus+.order-fieldset__label--radio::after{
   border: 2px solid $theme-color;
 }
 
-.fieldset__label--radio:active::after {
+.order-fieldset__label--radio:active::after {
   border: 2px solid rgba(68,68,68,0.3);
 }
 
@@ -110,7 +110,7 @@
   padding-bottom: 0px;
 }
 
-.fieldset__label--checkbox::after {
+.order-fieldset__label--checkbox::after {
   position: absolute;
   content: "";
   left: 0px;
@@ -121,7 +121,7 @@
   background-color: transparent;
 }
 
-.order-fieldset__checkbox:checked+.fieldset__label--checkbox::before {
+.order-fieldset__checkbox:checked+.order-fieldset__label--checkbox::before {
   position: absolute;
   content: "";
   left: 9px;
@@ -158,6 +158,7 @@
 }
 
 .order-fieldset--phone-input{
+  z-index: 2;
   padding-top: 7px;
   padding-bottom: 12px;
   font-size: 19px;
@@ -167,15 +168,16 @@
 }
 
 .order-fieldset--email-input{
-    padding-top: 15px;
-    padding-bottom: 14px;
-    background-color: transparent;
+  z-index: 2;
+  padding-top: 15px;
+  padding-bottom: 14px;
+  background-color: transparent;
 }
 
 .order-fieldset-icon{
   position: absolute;
   opacity: 0.2;
-  z-index: -1;
+  z-index: 1;
 }
 
 .order-fieldset--phone-icon{
@@ -196,19 +198,6 @@
 .order-fieldset--phone-input:active + .order-fieldset--phone-icon{
   opacity: 1;
   fill: $theme-color;
-}
-
-.form-sorting__textarea{
-  margin-top: 15px;
-  padding-top: 14px;
-  padding-left: 12px;
-  padding-right: 43px;
-  height: 121px;
-  width: 78%;
-  border: 2px solid $main-font-color;
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 18px;
 }
 
 .order-fieldset__container--comment {
@@ -243,60 +232,190 @@
 }
 
 @media (min-width: $tablet-width) {
-.order-fieldset__container {
-  padding-top: 50px;
-  display: flex;
-}
+  .order-fieldset__container {
+    padding-top: 50px;
+    display: flex;
+    padding-bottom: 16px;
+    &--name{
+      padding-bottom: 20px;
+    }
+  }
 
 
-  .order-fieldset__legend{
-    width: 60px;
+  .order-fieldset__legend {
+    margin-top: 6px;
+    width: 100px;
     span{
       background-color: transparent;
     }
     &::after{
       display: none;
     }
+    &--color{
+      margin-top: 18px;
+    }
+    &--name{
+      margin-top: 15px;
+    }
   }
 
-  .order-fieldset__list{
+  .order-fieldset__label {
+    font-size: 19px;
+    line-height: 18px;
+  }
+
+  .order-fieldset__label--radio {
+    padding-left: 127px;
+  }
+
+  .order-fieldset__label--radio::after {
+    left: 47px;
+    top: -15px;
+    width: 48px;
+    height: 48px;
+  }
+  .order-fieldset__radio:checked+.order-fieldset__label--radio::before {
+    left: 63px;
+    top: 1px;
+    width: 20px;
+    height: 20px;
+  }
+
+  .order-fieldset__list {
     padding-left: 20px;
     flex-grow: 1;
   }
 
-  .order-fieldset__color-list{
+  .order-fieldset__color-list {
     display: flex;
     flex-wrap: wrap;
   }
 
   .order-fieldset__color-item{
     width: 30%;
-    padding-left: 60px;
+    padding-left: 70px;
+    &:nth-child(1){
+      padding-top: 15px;
+    }
+    &:nth-child(2){
+      padding-top: 16px;
+    }
+    &:nth-child(2n){
+      padding-left: 17px;
+    }
   }
+
+  .order-fieldset__label--checkbox{
+    padding-left: 90px;
+  }
+
+  .order-fieldset__label--checkbox::after {
+    left: 8px;
+    top: -15px;
+    width: 50px;
+    height: 48px;
+  }
+
+  .order-fieldset__checkbox:checked+.order-fieldset__label--checkbox::before {
+    position: absolute;
+    content: "";
+    left: 18px;
+    top: -5px;
+    width: 40px;
+    height: 40px;
+    background-image: url(../img/icon-tick.svg);
+    background-repeat: no-repeat;
+    background-size: 33px 33px;
+  }
+
   .order-fieldset-grey{
     background-color: #f1f1f1;
   }
 
-  .order-fieldset__item{
+  .order-fieldset__item {
+    display: flex;
+    flex-grow: 1;
+    padding-top: 5px;
+    padding-bottom: 53px;
+    input {
+      flex-grow: 1;
+    }
+    &--name,
+    &--contact{
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
+  }
+
+  .order-fieldset--phone-icon{
+    top: 0px;
+    right: 26px;
+  }
+
+  .order-fieldset--mail-icon{
+    top: 0px;
+    right: 22px;
+  }
+
+  .order-fieldset__item--name {
+    padding-top: 0px;
+    padding-bottom: 30px;
+    label{
+      margin-top: 10px;
+      width: 125px;
+      padding-left: 48px;
+    }
+    input{
+      padding-top: 5px;
+      padding-left: 15px;
+      padding-bottom: 13px;
+      width: 100px;
+      font-size: 19px;
+      line-height: 18px;
+    }
+  }
+
+  .order-fieldset__item--name:first-child {
+    padding-top: 10px;
+    padding-bottom: 30px;
+    label{
+      margin-top: 0px;
+      width: 70px;
+      padding-top: 5px;
+    }
+    input{
+      padding-top: 0px;
+    }
+  }
+
+  .order-fieldset__container--contact {
+    padding-top: 0px;
+    padding-bottom: 50px;
+    &--first{
+      padding-top: 61px;
+      padding-bottom: 35px;
+    }
+  }
+
+  .order-fieldset__icon-input-contaner {
+    margin-left: 65px;
     display: flex;
     flex-grow: 1;
     input{
-      flex-grow: 1;
+      padding-top: 0px;
+      padding-bottom: 13px;
+      padding-left: 15px;
+      font-size: 19px;
+      line-height: 18px;
     }
   }
-  .order-fieldset__container--contact{
-    input,
-    textarea{
-      background-color: transparent;
-      flex-grow: 1;
-      margin-left: 50px;
-    }
-  }
-  .order-fieldset__container--contact {
-    textarea{
-      margin-left: auto;
-      margin-right: 0;
-      max-width: 700px;
+
+  .order-fieldset__container--comment {
+    padding-top: 50px;
+    legend{
+      margin-top: 17px;
+      padding-right: 167px;
     }
   }
 }
