--- a/source/sass/blocks/form-sorting.scss
+++ b/source/sass/blocks/form-sorting.scss
@@ -101,10 +101,7 @@
 
 @media (min-width: $desctop-width)  {
   .form-sorting__description{
-    max-width: 700px;
-    @include container;
-  }
-  .order-fieldset__container{
+    padding-top: 105px;
     max-width: 700px;
     @include container;
   }
@@ -118,7 +115,6 @@
   }
   .form-sorting__btn {
     margin: 0;
-    margin-top: 50px;
     margin-bottom: 50px;
   }
 
@@ -126,6 +122,7 @@
     padding: 0px;
     margin-left: auto;
     margin-right: 0;
+    margin-top: 10px;
     font-size: 17px;
     line-height: 30px;
   }
