--- a/source/sass/blocks/order-fieldset.scss
+++ b/source/sass/blocks/order-fieldset.scss
@@ -274,6 +274,7 @@
     width: 48px;
     height: 48px;
   }
+
   .order-fieldset__radio:checked+.order-fieldset__label--radio::before {
     left: 63px;
     top: 1px;
@@ -424,5 +425,103 @@
   .order-fieldset__color-item{
     width: 10%;
     padding-left: 100px;
+  }
+  .order-fieldset__container {
+    max-width: 1050px;
+    @include container;
+    &--type{
+      padding-bottom: 32px;
+    }
+  }
+
+  .order-fieldset__legend {
+    padding-right: 0px;
+    padding-left: 60px;
+    width: 145px;
+    &--type{
+      margin-top: 24px;
+    }
+  }
+
+  .order-fieldset__label--radio {
+    padding-top: 18px;
+    padding-left: 90px;
+    padding-bottom: 0px;
+  }
+
+  .order-fieldset__label--radio::after {
+    left: 10px;
+    top: 2px;
+  }
+
+  .order-fieldset__radio:checked+.order-fieldset__label--radio::before {
+    left: 26px;
+    top: 18px;
+  }
+
+  .order-fieldset__item{
+    padding-bottom: 35px;
+  }
+
+  .order-fieldset__color-item{
+    flex-grow: 0;
+    width: 20%;
+    &:nth-child(1n){
+      padding: 0px;
+      padding-right: 45px;
+      padding-left: 40px;
+      padding-bottom: 57px;
+    }
+    &:nth-child(-n+3){
+      padding-top: 16px;
+    }
+    &:nth-child(3n+1){
+      padding-left: 18px;
+      padding-right: 42px;
+    }
+  }
+  .order-fieldset__container--color{
+    padding-bottom: 12px;
+  }
+  .order-fieldset__item--name{
+    padding-top: 0px;
+    padding-left: 8px;
+    label{
+      padding-left: 5px;
+    }
+  }
+  .order-fieldset__list--name li{
+    margin-right: 19.5%;
+  }
+
+  .order-fieldset__list--name li:nth-child(2){
+    padding-bottom: 30px;
+  }
+  .order-fieldset__container--name{
+    padding-bottom: 16px;
+  }
+  .order-fieldset__icon-input-contaner{
+    margin-left: 30px;
+    margin-right: 16.3%;
+  }
+
+  .order-fieldset--phone-icon{
+    top: 0px;
+    right: 11px;
+  }
+
+  .order-fieldset--mail-icon{
+    top: 0px;
+    right: 7px;
+  }
+  .order-fieldset__container--comment{
+    legend{
+      padding-right: 0px;
+      margin-right: 0px;
+    }
+  }
+  .form-sorting__textarea{
+    margin-left: 50px;
+    margin-right: 16.5%;
   }
 }
