--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -15,6 +15,7 @@
 .main-header__logo-image {
   margin-left: auto;
   margin-right: auto;
+  display: block;
 }
 
 .main-header{
@@ -46,11 +47,20 @@
   .main-header__logo {
     left: 6.2%;
   }
+  .main-header__logo-image {
+    margin-left: 0px;
+    margin-right: auto;
+    display: block;
+  }
 }
 @media (min-width: $desctop-width){
   .main-header__logo {
-    top: 10px;
-    left: 43.5%;
+    top: 7px;
+    width: 160px;
+    display: block;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
   }
   .main-header{
     background: linear-gradient(#ffffff 65%, #f1f1f1 35%);
