--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,21 +1,39 @@
 .modal-add-item {
+  position: fixed;
+  top: 30%;
   box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
   border: 1px solid #c6c6c6;
+  width: 100%;
+  background: #ffffff;
+  z-index: 4;
+  cursor: default;
 }
 
 .modal-add-item__title {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 30px;
+  padding-left: 5px;
+  text-align: center;
   color: $main-font-color;
   font-size: 25px;
   font-weight: $font-bold;
   line-height: 30px;
   text-transform: uppercase;
+  width: 150px;
 }
 
 .modal-add-item__size-title {
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
   color: $loghten-font;
   font-size: 15px;
   font-weight: $font-normal;
   line-height: 30px;
+  width: 136px;
 }
 
 .modal-add-item__select {
@@ -23,7 +41,51 @@
 }
 
 .modal-add-item__btn {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 46px;
+  padding: 12px 0px;
+  padding-bottom: 16px;
+  display: block;
   background-color: $theme-color;
   border: 2px solid $theme-color;
   color: $primary-color;
+  width: 81.25%;
+}
+
+@media(min-width: $tablet-width) {
+  .modal-add-item {
+    display: block;
+    left: 12%;
+    right: 12%;
+    width: 566px;
+  }
+
+  .modal-add-item__title {
+    width: 62.7%;
+    font-size: 30px;
+    line-height: 57px;
+  }
+
+  .modal-add-item__size-title {
+    margin-top: 15px;
+    width: 62.7%;
+    text-align: center;
+    font-size: 17px;
+  }
+
+  .modal-add-item__select{
+    width: 62.7%;
+  }
+
+  .modal-add-item__btn{
+    margin-top: 25px;
+    width: 62.7%;
+  }
+}
+
+@media(min-width: $desctop-width) {
+  .modal-add-item {
+    left: 35%;
+  }
 }
