--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,4 +27,6 @@
 @import "blocks/main-footer.scss";
 @import "blocks/copyright.scss";
 @import "blocks/social-list.scss";
+@import "blocks/overlay.scss";
 @import "blocks/modal.scss";
+@import "blocks/size-list.scss"
