--- a/source/sass/blocks/weekly-goods.scss
+++ b/source/sass/blocks/weekly-goods.scss
@@ -254,6 +254,7 @@
   }
 
   .weekly-goods__image-contaner{
+    width: 60%;
     padding: 0px;
   }
 
@@ -283,6 +284,10 @@
 
    .weekly-goods__main-container{
     padding-left: 173px;
+  }
+
+  .weekly-goods__btn{
+    margin-bottom: 100px;
   }
 }
 
