--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -31,7 +31,7 @@
   .social-list {
     margin: 0px;
     padding-top: 33px;
-    padding-left: 110px;
+    padding-left: 21.3%;
   }
 }
 
@@ -39,7 +39,6 @@
   .social-list {
     margin-left: auto;
     margin-right: auto;
-    padding-left: 120px;
-    padding-right: 45px;
+    padding-left: 22.7%;
   }
 }
