--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -43,7 +43,9 @@
   }
 
   .main-footer__inside-container{
-    width: 70%;
+    width: 80%;
+    padding: 0px;
+    padding-right: 50px;
   }
 
   .main-footer__logo {
