--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -209,14 +209,18 @@
 
   .contacts__map-container {
     margin-top: 52px;
+    height: 462px;
   }
 
   .contacts__btn-container {
     margin-top: 50px;
     margin-bottom: 55px;
   }
+  .contacts__map-img {
+    height: auto;
+    width: auto;
+  }
 }
-
 
   @media (min-width: $desctop-width) {
   .contacts{
@@ -238,6 +242,11 @@
 
   .contacts {
     padding-top: 70px;
+  }
+
+  .contacts__map-img {
+    @include img-width;
+    height: auto;
   }
 
   .contacts__specifications {
@@ -269,7 +278,7 @@
   }
 
   .contacts__map-container{
-    width: 50%;
+    width: 49%;
     margin-top: 45px;
     margin-left: 25px;
     margin-bottom: 100px;
@@ -301,5 +310,4 @@
     bottom: 50px;
     left: 174px;
   }
-
 }
