--- a/source/sass/blocks/rewiews.scss
+++ b/source/sass/blocks/rewiews.scss
@@ -104,7 +104,7 @@
   .reviews__text {
     padding-top: 50px;
     order: 3;
-    width: 650px;
+    width: 97.4%;
     font-size: 17px;
     line-height: 30px;
   }
