--- a/source/sass/blocks/size-list.scss
+++ b/source/sass/blocks/size-list.scss
@@ -1,63 +1,61 @@
 .size-list {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: 37px;
-    margin-bottom: 39px;
-
-    @include inside-container;
+  margin-top: 37px;
+  margin-bottom: 39px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  @include inside-container;
+  justify-content: space-between;
 }
 
-.modal-add-item__item {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    padding: 13px 0pc;
+.modal-add-item__item{
+  padding: 13px 0pc;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .size-list__label {
-    padding: 13px 33px;
-
-    font-weight: $font-bold;
-    font-size: 17px;
-    line-height: 16px;
-    color: $loghten-font;
-    text-transform: uppercase;
-
-    border: 2px solid rgba(68,68,68, 0.1);
+  padding: 13px 33px;
+  font-size: 17px;
+  font-weight: $font-bold;
+  line-height: 16px;
+  text-transform: uppercase;
+  color: $loghten-font;
+  border: 2px solid rgba(68,68,68, 0.1);
 }
 
 .size-list__label:hover,
-.size-list__radio:focus + .size-list__label {
-    border: 2px solid rgba(68,68,68, 0.3);
+.size-list__radio:focus + .size-list__label{
+  border: 2px solid rgba(68,68,68, 0.3);
 }
 
-.size-list__radio:checked + .size-list__label {
-    border: 2px solid $theme-color;
+.size-list__radio:checked + .size-list__label{
+  border: 2px solid $theme-color;
 }
 
 @media (min-width: $tablet-width) {
-    .size-list {
-        margin-top: 21px;
-        margin-right: auto;
-        margin-bottom: 10px;
-        margin-left: auto;
-        padding: 0;
-    }
+  .size-list{
+    margin-top: 21px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px;
+    margin-bottom: 10px;
+  }
 
-    .modal-add-item__item {
-        margin-top: 5px;
-        margin-bottom: 5px;
-        padding: 13px 0pc;
-    }
+  .modal-add-item__item{
+    padding: 13px 0pc;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
 
-    .modal-add-item__item:nth-child(2) {
-        .size-list__label {
-            padding: 13px 45px;
-        }
-    }
-
+  .modal-add-item__item:nth-child(2){
     .size-list__label {
-        padding: 13px 50px;
+      padding: 13px 45px;
     }
+  }
+
+  .size-list__label {
+    padding: 13px 50px;
+  }
 }
+
