--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,11 +1,12 @@
 .modal-add-item {
+  display: none;
   position: fixed;
   top: 30%;
   box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
   border: 1px solid #c6c6c6;
   width: 100%;
   background: #ffffff;
-  z-index: 4;
+  z-index: 10;
   cursor: default;
 }
 
@@ -23,6 +24,7 @@
   line-height: 30px;
   text-transform: uppercase;
   width: 150px;
+  cursor: pointer;
 }
 
 .modal-add-item__size-title {
@@ -51,11 +53,12 @@
   border: 2px solid $theme-color;
   color: $primary-color;
   width: 81.25%;
+  cursor: pointer;
 }
 
 @media(min-width: $tablet-width) {
   .modal-add-item {
-    display: block;
+    display: none;
     left: 12%;
     right: 12%;
     width: 566px;
@@ -89,4 +92,8 @@
       left: 50%;
       transform: translateX(-50%);
   }
+}
+
+.modal-show {
+  display: block;
 }
