--- a/source/sass/blocks/overlay.scss
+++ b/source/sass/blocks/overlay.scss
@@ -12,6 +12,13 @@
   cursor: pointer;
 }
 
+.overlay__btn{
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  height: 100%;
+}
+
 .overlay-show{
   display: block;
 }
